{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 42,
  "lineage": "5ca707ee-a504-6c44-e618-37527e1d1442",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/networkSecurityGroups/nsg-apim",
            "location": "eastasia",
            "name": "nsg-apim",
            "resource_group_name": "rg-aks-apim-0420",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureKeyVault",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow-outbound-keyvault",
                "priority": 1040,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "SQL",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow-outbound-azure-sql",
                "priority": 1030,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow-outbound-storage",
                "priority": 1020,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-inbound-apim",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "ApiManagement",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-inbound-internet-https",
                "priority": 1030,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "6390",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-inbound-infra-lb",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-inbound-internet-http",
                "priority": 1020,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-inbound-apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-inbound-apim",
            "name": "allow-inbound-apim",
            "network_security_group_name": "nsg-apim",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "rg-aks-apim-0420",
            "source_address_prefix": "ApiManagement",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-inbound-infra-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "6390",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-inbound-infra-lb",
            "name": "allow-inbound-infra-lb",
            "network_security_group_name": "nsg-apim",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "rg-aks-apim-0420",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-inbound-internet-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-inbound-internet-http",
            "name": "allow-inbound-internet-http",
            "network_security_group_name": "nsg-apim",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "rg-aks-apim-0420",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-inbound-internet-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-inbound-internet-https",
            "name": "allow-inbound-internet-https",
            "network_security_group_name": "nsg-apim",
            "priority": 1030,
            "protocol": "Tcp",
            "resource_group_name": "rg-aks-apim-0420",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-outbound-azuresql",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "SQL",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-outbound-azure-sql",
            "name": "allow-outbound-azure-sql",
            "network_security_group_name": "nsg-apim",
            "priority": 1030,
            "protocol": "Tcp",
            "resource_group_name": "rg-aks-apim-0420",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-outbound-keyvault",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureKeyVault",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-outbound-keyvault",
            "name": "allow-outbound-keyvault",
            "network_security_group_name": "nsg-apim",
            "priority": 1040,
            "protocol": "Tcp",
            "resource_group_name": "rg-aks-apim-0420",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-outbound-storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "Storage",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/networkSecurityGroups/nsg-apim/securityRules/allow-outbound-storage",
            "name": "allow-outbound-storage",
            "network_security_group_name": "nsg-apim",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "rg-aks-apim-0420",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "apim-extern-0420",
            "fqdn": "apim-extern-0420.eastasia.cloudapp.azure.com",
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/publicIPAddresses/pip-apim",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.2.211.56",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "pip-apim",
            "resource_group_name": "rg-aks-apim-0420",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/snet-aks",
            "name": "snet-aks",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-aks-apim-0420",
            "virtual_network_name": "vnet-spoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet-apim",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/snet-apim",
            "name": "snet-apim",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-aks-apim-0420",
            "virtual_network_name": "vnet-spoke"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/snet-apim",
            "network_security_group_id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/networkSecurityGroups/nsg-apim",
            "subnet_id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/snet-apim"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-apim",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet-apim",
            "azurerm_virtual_network.vnet-spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6b96c078-2d02-4715-8e2c-d887c0ffe36d",
            "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/virtualNetworks/vnet-spoke",
            "location": "eastasia",
            "name": "vnet-spoke",
            "resource_group_name": "rg-aks-apim-0420",
            "subnet": [
              {
                "address_prefix": "10.10.0.0/24",
                "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/snet-aks",
                "name": "snet-aks"
              },
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/snet-apim",
                "name": "snet-apim",
                "security_group": "/subscriptions/edccbd3e-fb14-444d-92ae-e43da2008c69/resourceGroups/rg-aks-apim-0420/providers/Microsoft.Network/networkSecurityGroups/nsg-apim"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}